# kubeseal-webgui

./: .deepsource.toml  .deepsource.yaml  .dockerignore  .gitignore  .pre-commit-config.yaml  .releaserc  .typos.toml  CONTRIBUTING.md  Dockerfile  Dockerfile-UI  Dockerfile.api  Dockerfile.ui  NOTICE  Pipfile  README.md  SECURITY.md  app.py  docker-compose.yml  environmentvars.py  forms.py  htmlhelper.py  index.yaml  kind-config.yaml  kind-setup.sh  kubeseal-webgui-3.0.0.tgz  kubeseal-webgui-3.1.0.tgz  kubeseal-webgui-3.1.1.tgz  kubeseal-webgui-3.1.2.tgz  kubeseal-webgui-3.1.3.tgz  kubeseal-webgui-4.0.0.tgz  kubeseal-webgui-4.0.1.tgz  kubeseal-webgui-4.0.2.tgz  kubeseal-webgui-4.0.3.tgz  kubeseal-webgui-4.0.4.tgz  kubeseal-webgui-5.0.0.tgz  kubeseal-webgui-5.1.0.tgz  kubeseal-webgui-5.1.1.tgz  kubeseal-webgui-5.1.2.tgz  kubeseal-webgui-5.1.3.tgz  kubeseal-webgui-5.1.4.tgz  (+17 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  container-security-scan.yml  datree-validation.yml  frontend-tests.yml  ghcr-build.yml  helm-release.yml  helm.yml  kind.yaml  main.yml  semantic-release.yml  typo.yml
api/: .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  run.py  setup.cfg
api/app/: __init__.py  appconfig.py  config.py  kubernetes.py  kubeseal.py
api/config/: logging_config.yaml
api/kubeseal_webgui_api/: __init__.py  app.py  app_config.py  config.py  dependencies.py  kubernetes.py  kubeseal.py  main.py  run.py
api/kubeseal_webgui_api/internal/: __init__.py  incluster_core_client.py  kubernetes_client.py  kubernetes_namespace_resolver.py  kubernetes_resource_namespace_resolver.py  kubeseal_client.py  mock_core_client.py
api/kubeseal_webgui_api/routers/: config.py  kubernetes.py  kubernetes_namespace_resolver.py  kubernetes_sealed_secret_resolver.py  kubeseal.py  mock_namespace_resolver.py  mock_sealed_secret_resolver.py  models.py
api/tests/: test_kubernetes_service.py  test_kubeseal_service.py  test_run_kubeseal.py
api/tests/internal/: test_kubernetes_client.py  test_kubeseal_client.py
api/tests/models/: test_scope.py  test_secret.py  test_utils.py
api/tests/routers/: test_config.py  test_kubernetes.py  test_kubeseal.py
app/: __init__.py  app.py  environmentvars.py  kubeseal.py
app/static/: copy.js  output.css
app/templates/: footer.html  header.html  main.html  output.html  sealed-secret.yaml
chart/: kubeseal-webgui-2.1.2.tgz  values.yaml
chart/kubeseal-webgui/: Chart.yaml  README.md  values.yaml
chart/kubeseal-webgui/ci/: environment.yaml  fetch.yaml
chart/kubeseal-webgui/files/: logging_config.yaml
chart/kubeseal-webgui/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  deployment.yaml  ingress-api.yaml  ingress-ui.yaml  ingress.yaml  route-api.yaml  route-ui.yaml  route.yaml  service-api.yaml  service-ui.yaml  service.yaml  serviceaccount.yaml
chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
dev/: build-api-image.sh  build-ui-image.sh  bump_version.sh  local-dev-minikube.sh  run-minikube.sh  sealed-secret-template.yaml  test.js
docs/: architecture.md  configuration.md  development.md  installation.md  troubleshooting.md
mock/: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  test_cert.pem  token.txt
mock/kswg_mock/: app.py  main.py
mock/kswg_mock/routers/: config.py  kubernetes.py  kubeseal.py
mock/ssl/: ca.pem  mock-key.pem  mock.pem
static/: copy.js  output.css
templates/: contact.html  index.html  invalid_method.html  main.html  output.html  success.html
tests/: conftest.py  test_kubeseal_service.py  test_run_kubeseal.py
ui/: .env.development  .eslintrc.js  Dockerfile  README.md  eslint.config.js  index.html  nginx-default.conf  package-lock.json  package.json  vite.config.mjs  vue.config.js
ui/hooks/: 50-envsubst-default-conf.sh
ui/public/: config.json  index.html
ui/src/: App.vue  main.js
ui/src/assets/: custom.scss  styles.css
ui/src/components/: AppConfig.vue  AppLogo.vue  DarkMode.vue  Logo.vue  SealedSecretCard.vue  SecretFormInputs.vue  SecretInput.vue  SecretKeyCard.vue  Secrets.vue  SecretsList.vue  SecretsResults.vue
ui/src/composables/: useConfig.js  useSecrets.js
ui/src/utils/: mockData.js
ui/tests/: test_ui.py  test_ui_multi_cluster.py
