[tool.poetry]
name = "kubeseal-webgui-api"
version = "4.4.0"
description = "A python based backend for the kubeseal binary."
authors = ["Jan Herber <janherber@gmx.de>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "kubeseal_webgui_api" }]

[tool.poetry.dependencies]
python = "^3.12"
Jinja2 = "^3.1.2"
PyYAML = "^6.0"
kubernetes = "^26.1.0"
fastapi = "^0.109.1"
JSON-log-formatter = "^0.5.1"
uvicorn = "^0.20.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.3"
playwright = "^1.47.0"
pytest-playwright = "^0.5.2"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pytest = "^7.1.3"
isort = "^5.10.1"
pydocstyle = "^6.1.1"
pytest-cov = "^4.0.0"
mypy = "^0.991"
pyupgrade = "^3.0.0"
httpx = "^0.25.0"
ruff = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
src = [".", "test"]
target-version = "py312"

[tool.ruff.lint]
ignore = ["SIM108"]
extend-select = [
  "F",
  "C90",
  "N",
  "ANN",
  "S",
  "B",
  "A",
  "C4",
  "DTZ",
  "G",
  "PIE",
  "RET",
  "SIM",
  "PTH",
  "ERA",
  "FLY",
  "PERF",
  "FURB",
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["ANN201", "S101", "ANN001"]

[tool.pytest.ini_options]
markers = [
  "cluster: marks test that requires a k8s cluster in their environment",
  "container: marks test that requires the container environment",
]
