[tool.poetry]
name = "kubeseal-webgui-api"
version = "4.5.4"
description = "A python based backend for the kubeseal binary."
authors = ["Jan Herber <janherber@gmx.de>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "kubeseal_webgui_api" }]

[tool.poetry.dependencies]
python = "^3.12"
Jinja2 = ">=3.1.2"
PyYAML = ">=6.0"
kubernetes = ">=26.1.0"
fastapi = ">=0.125.0"
JSON-log-formatter = ">=1.0"
uvicorn = ">=0.34.0"
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.3"
playwright = ">=1.47.0"
pytest-playwright = ">=0.5.2"
starlette = ">=0.49.1"

[tool.poetry.group.dev.dependencies]
black = ">=25.0.0"
pytest = ">=8.0.0"
isort = ">=8.0.0"
pydocstyle = ">=6.1.1"
pytest-cov = ">=6.0.0"
mypy = ">=1.0.0"
pyupgrade = ">=3.0.0"
httpx = ">=0.27.0"
ruff = ">=0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
src = [".", "test"]
target-version = "py312"

[tool.ruff.lint]
ignore = ["SIM108"]
extend-select = [
  "F",
  "C90",
  "N",
  "ANN",
  "S",
  "B",
  "A",
  "C4",
  "DTZ",
  "G",
  "PIE",
  "RET",
  "SIM",
  "PTH",
  "ERA",
  "FLY",
  "PERF",
  "FURB",
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["ANN201", "S101", "ANN001"]

[tool.pytest.ini_options]
markers = [
  "cluster: marks test that requires a k8s cluster in their environment",
  "container: marks test that requires the container environment",
]
