[tool.poetry]
name = "kubeseal-webgui-api"
version = "4.5.4"
description = "A python based backend for the kubeseal binary."
authors = ["Jan Herber <janherber@gmx.de>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "kubeseal_webgui_api" }]

[tool.poetry.dependencies]
python = "^3.12"
Jinja2 = ">=3.1.6"
PyYAML = ">=6.0.3"
kubernetes = ">=35.0.0"
fastapi = ">=0.136.1"
JSON-log-formatter = ">=1.1.1"
uvicorn = ">=0.47.0"
pydantic = ">=2.13.4"
pydantic-settings = ">=2.14.1"
playwright = ">=1.59.0"
pytest-playwright = ">=0.7.2"
starlette = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
black = ">=26.3.1"
pytest = ">=9.0.3"
isort = ">=8.0.1"
pydocstyle = ">=6.3.0"
pytest-cov = ">=7.1.0"
mypy = ">=2.1.0"
pyupgrade = ">=3.21.2"
httpx = ">=0.28.1"
ruff = ">=0.15.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
src = [".", "test"]
target-version = "py312"

[tool.ruff.lint]
ignore = ["SIM108"]
extend-select = [
  "F",
  "C90",
  "N",
  "ANN",
  "S",
  "B",
  "A",
  "C4",
  "DTZ",
  "G",
  "PIE",
  "RET",
  "SIM",
  "PTH",
  "ERA",
  "FLY",
  "PERF",
  "FURB",
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["ANN201", "S101", "ANN001"]

[tool.pytest.ini_options]
markers = [
  "cluster: marks test that requires a k8s cluster in their environment",
  "container: marks test that requires the container environment",
]
