[tool.poetry]
name = "kubeseal_webgui_api"
version = "3.2.0"
description = "A python based backend for the kubeseal binary."
authors = ["Jan Herber <janherber@gmx.de>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "kubeseal_webgui_api"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
kubernetes = "^24.2.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^0.982"
flake8-awesome = "^1.3.0"
pyupgrade = "^3.0.0"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"

[build-system]
requires = ["setuptools>=46.0", "wheel"]
build-backend = "setuptools.build_meta"

# [build-system]
# requires = ["poetry-core"]
# build-backend = "poetry.core.masonry.api"
